src/test/test-models/bad/validate_set_double_locscale_bad2.stan
parameters {
  vector[3] vvv;
  real<scale=vvv> a;
  real y;
}

model {
  y ~ normal(0,1);
}
